// Copyright (c) Mysten Labs, Inc.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package narwhal;

message Transaction {
    repeated bytes transactions = 1;
}

// Empty message for when we don't have anything to return
message Empty {}

service Transactions {
    // Submit a Transactions
    rpc SubmitTransaction(Transaction) returns (Empty) {}

    // Submit a Transactions
    rpc SubmitTransactionStream(stream Transaction) returns (Empty) {}
}
